# morsmall

./: .gitignore  .gitmodules  .header  .travis.install.sh  .travis.script.sh  .travis.yml  Dockerfile  META  Makefile  README.md  README.org  dune-project  flake.nix  morsmall.opam  morsmall.opam.template
.github/composites/setup-nix/: action.yml
.github/workflows/: ci.yml
.nix/: devshell-default.nix  formatter.nix  package-default.nix  package-morsmall.nix  perinput-lib.nix  pre-commit-settings.nix  sync-pin-depends.nix  systems.nix  with-nixpkgs.nix  with-opam-nix.nix
lib/: libmorsmall.cma  libmorsmall.cmi  libmorsmall.cmo  libmorsmall.cmx  libmorsmall.cmxa  libmorsmall.cmxs  libmorsmall.mlpack
src/: .merlin  API.ml  API.mli  AST.ml  AST.mli  ASTUtils.ml  CST_to_AST.ml  Makefile  _tags  cmd.ml  constructors.ml  converter.ml  debugPrinter.ml  dune  env.ml  env.mli  generator.ml  generator.mli  interpreter.ml  jbuild  libmorsmall.ml  location.ml  location.mli  locationMapper.ml  morsmall.ml  morsmall.mli  printer.ml  returnCode.ml  safePrinter.ml  testexp.ml  testexp.mli  utils.ml  visitors.ml
src/equality/: located.ml  locatedEquality.ml  nonLocated.ml  nonLocatedEquality.ml
src/ext/: dune  extFormat.ml
src/printer/: debug.ml  debugNonLocated.ml  debugNonLocatedPrinter.ml  debugPrinter.ml  json.ml  jsonNonLocated.ml  jsonNonLocatedPrinter.ml  jsonPrinter.ml  safe.ml  safePrinter.ml
src/utilities/: dune  testParser.ml  testParser.mli
tests/: dune  generator.ml  generator.mli  jbuild  run.ml
tests/golden/: dune  golden.ml
tests/qcheck/: dune  generator.ml  qcheck.ml
tests/qcheck-based/: dune  generator.ml  qcheck_based.ml
