opam-version: "2.0"

name: "Morsmall"
version: "0.1"
license: "GPL3"

maintainer: "Nicolas Jeannerod nicolas.jeannerod@irif.fr"
authors: "Nicolas Jeannerod nicolas.jeannerod@irif.fr"

homepage: "https://github.com/colis-anr/morsmall"
bug-reports: "https://github.com/colis-anr/morsmall/issues"
dev-repo: "https://github.com/colis-anr/morsmall"

depends: [
  "dune"    {build}
  "morbig"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
